# OperaSim-PhysX

./: .gitignore  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.c4c0a93ca.0.json
Assets/: DepthToColor.shader  DepthToColorMat.mat
Assets/Fbx/: 3D_01カットコーン素材（単色）.fbx  3D_02カットコーン素材（単色）.fbx  3D_03カラーコーン素材（2色）.fbx  足場材-1.fbx
Assets/Prefab/: c30r.prefab  cut_cone.prefab  d37pxi24 1.prefab  d37pxi24.prefab  d37pxi24_2 Variant.prefab  d37pxi24_2.prefab  ic120 1.prefab  ic120 2.prefab  ic120 3.prefab  scaffold.prefab  zx120 1.prefab  zx120.prefab  zx200.prefab
Assets/Scenes/: New Scene.unity  ROS.prefab  Real Scene.unity
Assets/Scripts/: ApplyMatrixTransform.cs  DrawRectangle.cs  MakeDataset.cs  SceneParamManager.cs  SimpleCmdVelPublisher.cs  test copy 2.cs  test copy 3.cs  test copy.cs  test.cs
Python/: DepthCamera_2025-01-07-20-07-05.json  Makefile  README.md  processing_times_20250111_035654.csv  processing_times_20250114_013342.csv  processing_times_20250117_214900.csv  processing_times_20250125_221754.csv  processing_times_20250127_145327.csv  processing_times_20250128_000632.csv  pyproject.toml
Python/alg/virtual/make_dataset/camera/: object_1.py  object_2.py  object_3.py  tmp_success.py  tmp_success2.py  world.py
Python/alg/virtual/make_dataset/point_cloud/: annotate_img.py  annotate_pcd.py  pcd.py  pcd2.py  pcd3.py  plot_time.py  runner.py  test.py  view_pcd_random.py  view_pcd_voxel.py
Python/alg/virtual/train/: model.py  sampler.py  train.py  trial.py  trial2.py
Python/alg/virtual/verification/: test.py
(+7 files in other folders)
